removed flex sticky footer code as it created too much space between main content and footer, changed to fixed footer for now until I find a better solution

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,28 +1,18 @@
-html {
-
-    height: 100%;
-
-}
-
 body {
 
     background-color: #ffffff;
     background-image: url("../images/background.png");
     height: 100%;
-    display: flex;
-    flex-direction: column;
+    padding-bottom: 80px;
 
 }
 
 .footer,  {
 
-    max-width: 100%;
     flex-shrink: 0;
-
-}
-
-.content {
-
-    flex: 1 0 auto;    
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 80px;
 
 }
